--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script>
     window.onload = function () {
       const params = new URLSearchParams(window.location.search);
-      const target = params.get("url");
+      const target = params.get("link");
 
       if (target) { 
         url= decodeURIComponent(target);
