--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
       if (target) { 
         url= decodeURIComponent(target);
-        alert(`${target},${url}`);
+        //alert(`${target},${url}`);
         window.location.href = url;
         el= document.querySelector(".uu");
         el.href=url;
